kubernetes/apps/development/code-server/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: code-server-oidc
  namespace: development
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: code-server
  oidc:
    provider:
      issuer: https://keycloak.ewatkins.dev/realms/master
    clientID: code-server
    clientSecret:
      name: code-server-secret
      namespace: development
    redirectURL: "https://code.ewatkins.dev/oauth2/callback"
    logoutPath: "/oauth2/logout"
    scopes: ["openid", "profile", "email"]
