kubernetes/apps/development/code-server/app/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: code-server-ssh
  namespace: development
spec:
  parentRefs:
    - name: code
      namespace: network
      sectionName: ssh
  rules:
    - backendRefs:
        - name: code-server
          port: 2222
